--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Pillow==6.2.0
 google_images_download==2.8.0
 opencv-python
-python-resize-image==1.1.19pyt
+python-resize-image==1.1.19
 matplotlib
-tensorflow
+tensorflow==1.14
 keras
 bs4
 requests
